--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,2305],[[4,5,6,0,[],[1,11,2294],[],[[7,0,0,[],[1,711,286],[]],[8,0,0,[],[1,998,716],[]],[9,0,0,[],[1,1714,447],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,33188],[[4,5,6,0,[],[1,8,33179],[],[[7,0,0,[],[1,652,2114],[]],[8,0,0,[],[1,2766,5734],[]],[9,0,0,[],[1,8501,3654],[]],[10,0,0,[],[1,12156,8416],[]],[11,0,0,[],[1,20572,12016],[]]],[],[5,5,0,0]]],[],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/vilimahonen/webcounter/src/tests","*src/tests","*Increment","*/Users/vilimahonen/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Resetting the counter works"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/vilimahonen/webcounter/src/tests","*src/tests","*Increment","*/Users/vilimahonen/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Resetting the counter works","*Add amount increases counter","*Add multiple amounts accumulate"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:02","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:32","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":5,"skip":0},{"elapsed":"00:00:33","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":5,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1763380170745;
+window.output["baseMillis"] = 1763382950778;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 2307;
+window.output["generated"] = 33191;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
